--- a/index.html
+++ b/index.html
@@ -10,10 +10,30 @@
 </head>
 
 <body>
+    <div class="navbar-menu">
+        <div class="navbar-brand">
+            <a class="navbar-item" href="https://iharrblx.xyz">
+              <img src="" alt="ihar" width="112" height="28">
+            </a>
+            <div class="navbar-burger" data-target="navbarExampleTransparentExample">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </div>        
+        <div class="navbar-start">
+            <a class="navbar-item">
+                Jobs
+            </a>
+      <a class="navbar-item" href="https://forum.iharrblx.xyz/t/announements">                Announcements
+            </a>
+        </div>
+
+    </div>
     <section class="hero is-link">
         <div class="hero-body">
             <p class="title">Imperial Hotels and Resorts</p>
-            <p class="subtitle"> phones for mrreals</p>
+            <p class="subtitle"> We're an amazing hotel group on roblox, we want you!</p>
         </div>
 
     </section>
