--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="navbar-menu">
         <div class="navbar-brand">
             <a class="navbar-item" href="https://iharrblx.xyz">
-              <img src="" alt="ihar" width="112" height="28">
+              <img src="https://i.imgur.com/N5uWOiQ.png" alt="ihar" width="28" height="28">
             </a>
             <div class="navbar-burger" data-target="navbarExampleTransparentExample">
               <span></span>
@@ -22,7 +22,7 @@
             </div>
           </div>        
         <div class="navbar-start">
-            <a class="navbar-item">
+            <a class="navbar-item" href="https://imperial-hotels-and-resorts-github.github.io/site-2021/jobs.html">
                 Jobs
             </a>
       <a class="navbar-item" href="https://forum.iharrblx.xyz/t/announements">                Announcements
@@ -34,6 +34,7 @@
         <div class="hero-body">
             <p class="title">Imperial Hotels and Resorts</p>
             <p class="subtitle"> We're an amazing hotel group on roblox, we want you!</p>
+            <button class="button" onclick="window.location.href='https://imperial-hotels-and-resorts-github.github.io/site-2021/jobs.html'"> Jobs </button>
         </div>
 
     </section>
@@ -59,7 +60,7 @@
 
                 <div>
                     <p class="heading">Discord</p>
-                    <p class="title">350++</p>
+                    <p class="title">350+</p>
                 </div>
 
             </div>
