--- a/jobs.html
+++ b/jobs.html
@@ -12,7 +12,7 @@
 <body>
     <div class="navbar-menu">
         <div class="navbar-brand">
-            <a class="navbar-item" href="https://iharrblx.xyz">
+            <a class="navbar-item" href="https://imperial-hotels-and-resorts-github.github.io/site-2021/">
               <img src="https://i.imgur.com/N5uWOiQ.png" alt="ihar" width="28" height="28">
             </a>
             <div class="navbar-burger" data-target="navbarExampleTransparentExample">
